AM_CXXFLAGS=-I../src
AM_LDFLAGS=-L../lib 
bin_PROGRAMS=extworker
extworker_SOURCES=api_child.cpp  extworker.h  KChildApiService.cpp  KChildApiService.h  KChildListen.cpp  KChildListen.h  main.cpp\
../src/EdcodeUtils.cpp ../src/HttpExt.cpp ../src/KApiDso.cpp ../src/KApiEnv.cpp ../src/KBuffer.cpp ../src/KEnvInterface.cpp ../src/KFastcgiUtils.cpp ../src/KPipeStream.cpp ../src/KSocket.cpp ../src/KProcess.cpp ../src/KStream.cpp ../src/KString.cpp ../src/KThreadPool.cpp ../src/KCgiEnv.cpp ../src/process.cpp ../src/malloc_debug.cpp

